aggiunto endpoint getUserInfo
