# doc/api.yaml
@@ -175,7 +175,65 @@ paths:
                     description: user identifier
                     type: integer
                     minimum: 0
-  /users/{id}/profile:
+  /users/{username}:
+    parameters:
+        - name: username
+          in: path
+          description: The username of the user who you want to get its id
+          schema:
+            description: A string representing the username of the user who you want to change or add photo
+            type: string
+            pattern: "^[a-zA-Z0-9_.]+$"
+            minLength: 3
+            maxLength: 16
+          required: true
+    get: 
+      tags: ["User Management"]
+      summary: Getting user id
+      description: Getting the user id knowing the username
+      operationId: getUserId
+      responses:
+        "200":
+          description: Id retrieved successfully
+          content:
+            application/json:
+              schema:
+                description: Id of a user 
+                type: integer
+                minimum: 0
+        "400":
+          description: Invalid input
+        "404": 
+          description: User not found
+  /users/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: The ID of the user who have to be retrieved
+        schema:
+          description: Unique ID of the user
+          type: integer
+          minimum: 0
+        required: true
+    get: 
+      tags: ["User Management"]
+      summary: User info
+      description: Getting info about a user
+      operationId: getUserInfo
+      responses:
+        "200":
+          description: User retrieved successfully
+          content:
+            application/json:
+              schema:  
+                $ref: "#/components/schemas/User" 
+        "400":
+          description: Invalid input 
+        "401":
+          description: User has to authenticate to get info about a user
+        "404":
+          description: User not found
+  /users/{id}/username:
     put: 
       tags: ["User Management"]
       summary: Change username
